--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PT'
 - !lcsh 'Dutch poetry'
+- GITenberg
 title: Een klein heldendicht
 url: http://www.gutenberg.org/ebooks/16830
